 * Terrains:
   * Removed unit elevation from N-S hanging bridges
   * Added unit elevation to NW-SE and SW-NE stone chasm bridges
   * Added unit elevation to NW-SE and SW-NE plank bridges
   * Hanging, stone chasm, and plank bridges are now displayed in-game simply
     as "Bridge", retaining their descriptive names in the editor as per
     convention.
 * User interface:
   * Force uniform font rendering settings across X11 and Apple OS X, avoiding
     color glitches resulting from incorrect applications of subpixel hinting
     (bug #20337).
 * WML engine:
   * Added WML menu item and event handler views to the Gamestate Inspector
     dialog.
   * Removed y offset by -1 from [message]'s scroll-to-unit logic.
 * Miscellaneous and bug fixes:
   * Default to non-strict compilation with CMake.
   * Fixed strict compilation with clang 3.5 and 3.6.
   * Fixed strict compilation with gcc 5.
   * Fixed unbound memory read in internal time formatting code with
     specially-crafted input.
   * Fixed RECRUIT_UNIT_VARIATIONS core WML macro leaking an internal temporary
     variable ($recruited_unit_random_variation).
   * Fixed unit [resistance] and [jamming_costs] not being considered for sync
     check.
   * Fixed OOS on random maps, where clients placed sides in different castles.

Version 1.12.4:
 * Security fixes:
   * Disallowed WML inclusion of .pbl files with a non-lowercase extension too
     (CVE-2015-5070, bug #23504).
 * Miscellaneous and bug fixes:
   * Removed broken Python port of wmlxgettext from data/tools/.

Version 1.12.3:
 * Security fixes:
   * Disallowed inclusion of .pbl files from WML (CVE-2015-5069, bug #23504).
 * AI:
   * Lua AI helper functions: fix bug crashing the AI when number= is not set in
     a unit attack definition
   * Micro AIs: add a warning and avoid crash when a non-existing side is used
     in the [micro_ai] tag
 * Editor:
   * Fixed stack corruption bug in the Side Setup dialog.
 * Language and i18n: