@@ -133,14 +133,14 @@ surface getMinimap(int w, int h, const gamemap &map, const team *vw, const std::
 						need_highlighting = true;
 					}
 
-					if(i == cache->end()) {
+					if(i == cache->end() && !terrain_info.minimap_image().empty()) {
 						std::string base_file =
 								"terrain/" + terrain_info.minimap_image() + ".png";
 						surface tile = get_image(base_file,image::HEXED);
 
 						//Compose images of base and overlay if necessary
 						// NOTE we also skip overlay when base is missing (to avoid hiding the error)
-						if(tile != NULL && map.get_terrain_info(terrain).is_combined()) {
+						if(tile != NULL && map.get_terrain_info(terrain).is_combined() && !terrain_info.minimap_image_overlay().empty()) {
 							std::string overlay_file =
 									"terrain/" + terrain_info.minimap_image_overlay() + ".png";
 							surface overlay = get_image(overlay_file,image::HEXED);
